--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url('bg.jpg');
+    background-image: url('bg2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -15,10 +15,10 @@ body {
     border-radius:32px;
     box-shadow: 0px 12px 14px -7px #525252;
     font-family: 'Poppins';
-    background-color: #000000;
+    background-color: #fffb00;
     /* Green */
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
